# gchat_agent

./: .gitignore  CLAUDE.md  LIMITED.md  MEMORY.md  PLAN.md  README.md  call_apigw.sh  chat_apigw.sh  demo_live.sh  demo_live_apigw.sh  docker-compose.yml  pyproject.toml  start_bot.sh
call/: CLAUDE.md  ai_call.py  auto_answer.py  demo_incident_call.py  demo_meet_call.py  dm_resolve.py  gemini_call.py  gemini_voice.py  huddle_watch.py  make_call.py  meet_audio_capture.py  meet_audio_inject.py  meet_call_browser.py  meet_call_run.py  meet_call_setup.py  meet_rest_watch.py
data/: scenarios.json
docs/: ARCHITECTURE.md  CALL_AUTOMATION.md  CLAUDE.md  OVERVIEW.md  RAG_ANALYSIS.md  SETUP_GOOGLE_CHAT.md
scripts/: CLAUDE.md  ai_call.py  apigw_chat.py  authorize.py  auto_answer.py  call_network_capture.py  demo_incident_call.py  demo_local.py  demo_meet_call.py  diag_call_dom.py  diag_call_join.py  diag_call_sink3.sh  diag_call_sinks.sh  gemini_call.py  gemini_voice.py  huddle_watch.py  make_call.py  meet_audio_capture.py  meet_audio_inject.py  meet_call_browser.py  meet_call_js.py  meet_call_run.py  meet_call_setup.py  meet_call_signals.py  meet_rest_watch.py  run_poller.py  run_staff.py  run_webhook.py  selftest_call.sh  verify_dedup.py  verify_injection.py  verify_precision.py
smoke/: README.md  get_token.py  smoke_test_chat.py
tests/: CLAUDE.md  __init__.py  fakes.py  test_analyzer.py  test_call_on_resolve.py  test_config.py  test_dm_resolve.py  test_duplicate_questions.py  test_fakes.py  test_github_export.py  test_goclaw_hardening.py  test_google_rest.py  test_rag.py  (+16 more)
(+174 files in other folders)
